# rgain3

./: .gitignore  Jenkinsfile  pyproject.toml  python-rgain.spec
rgain3/: __init__.py  collectiongain.py  replaygain.py
rgain3/lib/: rgio.py  version.py
