[build-system]
requires = [ "hatch-requirements-txt",]
build-backend = "hatchling.build"

[project]
name = "rgain3"
version = "1.0.0"
description = "Multi-format Replay Gain utilities"
readme = "README.md"
requires-python = ">=3.5"
keywords = [ "audio", "mp3", "ReplayGain",]
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU General Public License (GPL)",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Multimedia :: Sound/Audio :: Analysis",
        "Topic :: Software Development :: Libraries :: Python Modules",]
dynamic = [ "dependencies",]

[project.license]
file = "COPYING"

[[project.authors]]
name = "Felix Krull"
email = "f_krull@gmx.de"

[project.urls]
Homepage = "https://github.com/chaudum/rgain"
"Issue Tracker" = "https://github.com/domdfcoding/rgain/issues"
"Source Code" = "https://github.com/domdfcoding/rgain"

[project.optional-dependencies]
test = [
    "tox>=3.14,<4.0",
    "pytest>=5.3,<6.0",
    "pytest-cov>=2.8",
    "pytest-flake8>=1.0",
    "pytest-isort>=0.3",
    ]

[project.scripts]
collectiongain = "rgain3.collectiongain:main"
replaygain = "rgain3.replaygain:main"

# [tool.mypy]
# python_version = "3.8"
# namespace_packages = true
# check_untyped_defs = true
# warn_unused_ignores = true
# no_implicit_optional = true
# show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.hatch.build]
exclude = [
    "/*",
    "!/rgain3",
    "!/rgain3/**/requirements.txt",
    "!/requirements.txt",
    "test",
    "man",
    "scripts",
]

[tool.hatch.build.sdist]
include = [ "rgain3", "requirements.txt",]

[tool.hatch.build.wheel]
include = [ "rgain3",]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]

[tool.setuptools.bdist_rpm]
requires = "gobject-introspection python3-gobject-base gstreamer-plugins-base gstreamer-plugins-good gstreamer-plugins-bad gstreamer-plugins-ugly"
doc_files = ["README.md", "CHANGES.md"]
release = "%{?build_number}%{!?build_number:1}%{?dist}"
